--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <p data-i18n="project1Desc"></p>
         <div class="project-buttons">
           <a href="https://github.com/Wilcleyber/FlexiCalc.git" class="btn" target="_blank" data-i18n="viewGithub">Ver no GitHub</a>
-          <a href="https://github.com/Wilcleyber/FlexiCalc/releases/download/v1.0/FlexiCalc.exe" class="btn" target="_blank" data-i18n="downloadExe">Baixar .exe</a>
+          <a href="https://github.com/Wilcleyber/FlexiCalc/releases" class="btn" target="_blank" data-i18n="downloadExe">Baixar .exe</a>
         </div>
       </div>
     </div>
@@ -207,7 +207,7 @@
         <p data-i18n="project2Desc"></p>
         <div class="project-buttons">
           <a href="https://github.com/Wilcleyber/Gerenciador-de-Tarefas.git" class="btn" target="_blank" data-i18n="viewGithub">Ver no GitHub</a>
-          <a href="https://github.com/Wilcleyber/Gerenciador-de-Tarefas/releases/download/v1.0/EasyTask.rar" class="btn" target="_blank" data-i18n="downloadExe">Baixar .exe</a>
+          <a href="https://github.com/Wilcleyber/Gerenciador-de-Tarefas/releases" class="btn" target="_blank" data-i18n="downloadExe">Baixar .exe</a>
         </div>
       </div>
     </div>
