Atualização do index

--- a/index.html
+++ b/index.html
@@ -161,7 +161,6 @@
   <div class="profile-info">
     <h2 class="profile-name">Wilcleyber</h2>
     <p class="profile-desc" data-i18n="aboutText">
-      Sou estudante de Análise e Desenvolvimento de Sistemas, apaixonado por tecnologia, desenvolvimento de software e eficiência. Estou construindo meu portfólio com projetos práticos para crescer profissionalmente e conquistar meu primeiro estágio na área de desenvolvimento.
     </p>
   </div>
 </section>
@@ -248,7 +247,7 @@
       pt: {
         projectsNav: 'Projetos',
         contactNav: 'Contato',
-        aboutText: 'Sou estudante de Análise e Desenvolvimento de Sistemas, apaixonado por tecnologia, desenvolvimento de software e eficiência. Estou construindo meu portfólio com projetos práticos para crescer profissionalmente e conquistar meu primeiro estágio na área de desenvolvimento.',
+        aboutText: "Sou estudante de Análise e Desenvolvimento de Sistemas, apaixonado por tecnologia e movido por um propósito claro: transformar estudo em prática e crescer com consistência.\n\nDesde o início da graduação, venho construindo um portfólio baseado em projetos reais, funcionais e publicados, que representam não apenas o que aprendi, mas a forma como penso. Gosto de soluções diretas, interfaces objetivas e código organizado. Prezo por eficiência, clareza e funcionalidade — às vezes até mais do que estética.\n\nMeu portfólio reflete exatamente isso: é como eu — talvez não seja o mais bonito, mas é profissional, objetivo e entrega o que promete.\n\nEncaro cada projeto como um pequeno passo em direção ao meu maior objetivo: me tornar um profissional capaz de contribuir com inteligência, respeito e propósito, seja em um estágio, seja em grandes projetos de desenvolvimento no futuro.\n\nEssa página é simples, sim — mas cada linha de código por trás dela tem intenção, aprendizado e evolução.",
         projects: 'Projetos',
         contactPrompt: 'Entre em contato:',
         linkedin: 'LinkedIn',
@@ -266,7 +265,7 @@
         projectsNav: 'Projects',
         contactNav: 'Contact',
         about: 'About Me',
-        aboutText: 'I am a Systems Analysis and Development student, passionate about technology, software development, and efficiency. I am building my portfolio with practical projects to grow professionally and land my first internship in software development.',
+        aboutText: 'I’m a Software Development student, passionate about technology and driven by a clear goal: turning study into practice and growing steadily. Since the beginning of my degree, I’ve been building a portfolio focused on real, functional, and published projects that represent not only what I’ve learned — but how I think. I like direct solutions, clean interfaces, and organized code. I value efficiency, clarity, and functionality — sometimes even more than visual appeal. My portfolio reflects exactly that: it’s like me — maybe not the prettiest, but professional, straightforward, and it delivers what it promises. I see each project as a small step toward my long-term goal: becoming a developer capable of contributing with intelligence, purpose, and respect — whether in an internship or in large-scale development projects in the future. This site is simple — but every line of code behind it carries intention, learning, and growth.',
         projects: 'Projects',
         contactPrompt: 'Contact me:',
         linkedin: 'LinkedIn',
